style: add clip-path to github corner component to fix overflow alignment

--- a/sources/css/components/github-corner.css
+++ b/sources/css/components/github-corner.css
@@ -5,6 +5,7 @@
   top: 0;
   border: 0;
   right: 0;
+  clip-path: polygon(0 0, 100% 0, 100% 100%);
 
   &>svg {
     transition: fill 0.25s ease-in-out;
